fix: fix overflow on mobile devices

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,9 +1,8 @@
-html,
-body {
-  overflow: hidden;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
+}
+
+html {
+  overflow: auto;
 }
