--- a/components/navigation/navigation.module.scss
+++ b/components/navigation/navigation.module.scss
@@ -6,7 +6,7 @@
     margin-top: 3px;
     height: 80vh;
     position: absolute;
-    top: 100%;
+    top: 10vh;
     right: 0;
     z-index: 10;
     width: 100%;
